--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "nuxt": "^3.12.4",
     "vue": "latest",
     "vue-chartjs": "^5.3.1"
+  },
+  "devDependencies": {
+    "@nuxtjs/svg": "^0.4.1"
   }
 }
